apps/1-retail-banking/1-retail-banking.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: retail-banking
  name: retail-banking
