apps/1-retail-banking/5-customer-profile-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: customer-profile-httproute
  namespace: retail-banking
spec:
  parentRefs:
  - name: retail-banking-kong-api-gateway
    namespace: retail-banking
  hostnames:
  - "retail-banking.hellocloudbank.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: customer-profile-svc
      port: 8081
